v1.3/_sources/examples/formats/NEXRAD_Level_3_File.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/formats/NEXRAD_Level_3_File.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_formats_NEXRAD_Level_3_File.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_formats_NEXRAD_Level_3_File.py:


===================
NEXRAD Level 3 File
===================

Use MetPy to read information from a NEXRAD Level 3 (NIDS product) file and plot

.. GENERATED FROM PYTHON SOURCE LINES 11-18

.. code-block:: default

    import matplotlib.pyplot as plt
    import numpy as np

    from metpy.cbook import get_test_data
    from metpy.io import Level3File
    from metpy.plots import add_metpy_logo, add_timestamp, colortables








.. GENERATED FROM PYTHON SOURCE LINES 19-51

.. code-block:: default

    fig, axes = plt.subplots(1, 2, figsize=(15, 8))
    add_metpy_logo(fig, 190, 85, size='large')
    ctables = (('NWSStormClearReflectivity', -20, 0.5),  # dBZ
               ('NWS8bitVel', -100, 1.0))  # m/s
    for v, ctable, ax in zip(('N0Q', 'N0U'), ctables, axes):
        # Open the file
        name = get_test_data(f'nids/KOUN_SDUS54_{v}TLX_201305202016', as_file_obj=False)
        f = Level3File(name)

        # Pull the data out of the file object
        datadict = f.sym_block[0][0]

        # Turn into an array using the scale specified by the file
        data = f.map_data(datadict['data'])

        # Grab azimuths and calculate a range based on number of gates
        az = np.array(datadict['start_az'] + [datadict['end_az'][-1]])
        rng = np.linspace(0, f.max_range, data.shape[-1] + 1)

        # Convert az,range to x,y
        xlocs = rng * np.sin(np.deg2rad(az[:, np.newaxis]))
        ylocs = rng * np.cos(np.deg2rad(az[:, np.newaxis]))

        # Plot the data
        norm, cmap = colortables.get_with_steps(*ctable)
        ax.pcolormesh(xlocs, ylocs, data, norm=norm, cmap=cmap)
        ax.set_aspect('equal', 'datalim')
        ax.set_xlim(-40, 20)
        ax.set_ylim(-30, 30)
        add_timestamp(ax, f.metadata['prod_time'], y=0.02, high_contrast=True)

    plt.show()



.. image-sg:: /examples/formats/images/sphx_glr_NEXRAD_Level_3_File_001.png
   :alt: NEXRAD Level 3 File
   :srcset: /examples/formats/images/sphx_glr_NEXRAD_Level_3_File_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.685 seconds)


.. _sphx_glr_download_examples_formats_NEXRAD_Level_3_File.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: NEXRAD_Level_3_File.py <NEXRAD_Level_3_File.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: NEXRAD_Level_3_File.ipynb <NEXRAD_Level_3_File.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
